testsuite/good/components/test_multiple_component_handles_void/MyComponent.flux
type MyComponent {
   void componentMethod();
}
constructors {
   Comp(int theId) { id = theId; }
}
attributes {
   int id;
}
methods {
   void componentMethod() {
      System.out.println("Call forwarded to MyComponent#" + id + ".componentMethod()");
   }
}